--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Additional project-specific ignores
+dist/
+.cursor/
+!.cursor/rules/basicrules.mdc
